// Copyright 2018 The casbin Authors. All Rights Reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.proto";
option java_outer_classname = "CasbinProto";

package proto;

// The Casbin service definition.
service Casbin {
  rpc NewEnforcer (NewEnforcerRequest) returns (NewEnforcerReply) {
  }
  rpc NewAdapter (NewAdapterRequest) returns (NewAdapterReply) {
  }

  rpc Enforce (EnforceRequest) returns (BoolReply) {
  }

  rpc LoadPolicy (EmptyRequest) returns (EmptyReply) {
  }
  rpc SavePolicy (EmptyRequest) returns (EmptyReply) {
  }

  rpc AddPolicy (PolicyRequest) returns (BoolReply) {
  }
  rpc RemovePolicy (PolicyRequest) returns (BoolReply) {
  }

  rpc AddNamedPolicy (NamedPolicyRequest) returns (BoolReply) {
  }
  rpc RemoveNamedPolicy (NamedPolicyRequest) returns (BoolReply) {
  }

  // management api group
  rpc GetAllSubjects (GetSujectsRequest) returns (SubjectsReply) {
  }
  rpc GetAllNamedSubjects (GetSujectsRequest) returns (SubjectsReply) {
  }
  rpc GetAllObjects (GetObjectsRequest) returns (ObjectsReply) {
  }
  rpc GetAllNamedObjects (GetObjectsRequest) returns (ObjectsReply) {
  }
  rpc GetAllActions (GetActionsRequest) returns (ActionsReply) {
  }
  rpc GetAllNamedActions (GetActionsRequest) returns (ActionsReply) {
  }
  rpc GetAllRoles (GetRolesRequest) returns (RolesReply) {
  }
  rpc GetAllNamedRoles (GetRolesRequest) returns (RolesReply) {
  }
  rpc GetPolicy (GetPolicyRequest) returns (PolicyReply) {
  }

}

message NewEnforcerRequest {
  string modelText = 1;
  int32 adapterHandle = 2;
}

message NewEnforcerReply {
  int32 handler = 1;
}

message NewAdapterRequest {
  string adapterName = 1;
  string driverName = 2;
  string connectString = 3;
}

message NewAdapterReply {
  int32 handler = 1;
}

message EnforceRequest {
  int32 enforcerHandler = 1;
  string sub = 2;
  string obj = 3;
  string act = 4;
}

message BoolReply {
  bool res = 1;
}

message EmptyRequest {
  int32 handler = 1;
}

message EmptyReply {
}

message PolicyRequest {
  int32 enforcerHandler = 1;
  string sub = 2;
  string obj = 3;
  string act = 4;
}

message NamedPolicyRequest {
  int32 enforcerHandler = 1;
  string ptype = 2;
  string sub = 3;
  string obj = 4;
  string act = 5;
}

message GetSujectsRequest {
  int32 enforcerHandler = 1;
  string pType = 2;
}

message SubjectsReply {
  repeated string subjects = 1;
}

message GetObjectsRequest {
  int32 enforcerHandler = 1;
  string pType = 2;
}

message ObjectsReply {
  repeated string objects = 1;
}

message GetActionsRequest {
  int32 enforcerHandler = 1;
  string pType = 2;
}

message ActionsReply {
  repeated string actions = 1;
}

message GetRolesRequest {
  int32 enforcerHandler = 1;
  string pType = 2;
}

message RolesReply {
  repeated string roles = 1;
}

message GetPolicyRequest {
  int32 enforcerHandler = 1;
  string pType = 2;
  int32 fieldIndex = 3;
  repeated string fieldValues = 4;
}

message PolicyReply {
  message item {
    repeated string items = 1;
  }

  repeated item policy = 1;
}